--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <canvas id="canvas" width="800" height="800"></canvas>
-    <script src="https://unpkg.com/d3-interpolate@1.3.2/dist/d3-interpolate.min.js"></script>
     <script src="https://unpkg.com/hilbert-curve"></script>
     <script>
       const roma = [
@@ -276,7 +275,7 @@
       const context = canvas.getContext("2d");
       const prev = { x: undefined, y: undefined };
       for (index = 0; index < 256; index += 1) {
-        const color = d3.interpolateDiscrete(roma)(index / 256);
+        const color = roma[index];
         const point = hilbertCurve.indexToPoint(index, n);
         context.fillStyle = color;
         context.fillRect(
