--- a/examples/color-ramp/index.html
+++ b/examples/color-ramp/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <canvas id="canvas" width="800" height="800"></canvas>
-    <script src="../../index.js"></script>
+    <script src="../../dist/hilbert-curve.min.js"></script>
     <script>
       // http://www.fabiocrameri.ch/colourmaps.php; roma ramp
       const ramp = [
